tests/ui/parser/lifetime-in-pattern.stderr
error: unexpected lifetime `'a` in pattern
  --> $DIR/lifetime-in-pattern.rs:1:10
   |
LL | fn test(&'a str) {
   |          ^^ help: remove the lifetime

error: expected one of `:`, `@`, or `|`, found `)`
  --> $DIR/lifetime-in-pattern.rs:1:16
   |
LL | fn test(&'a str) {
   |                ^ expected one of `:`, `@`, or `|`
   |
   = note: anonymous parameters are removed in the 2018 edition (see RFC 1685)
help: if this is a `self` type, give it a parameter name
   |
LL | fn test(self: &'a str) {
   |         +++++
help: if this is a parameter name, give it a type
   |
LL | fn test(str: &TypeName) {
   |         ~~~~~~~~~~~~~~
help: if this is a type, explicitly ignore the parameter name
   |
LL | fn test(_: &'a str) {
   |         ++

error: aborting due to 2 previous errors

